objects/Intuitaritcletranslations__c.object
<CustomObject>
    <fields>
        <fullName>ArticleID__c</fullName>
        <externalId>true</externalId>
        <label>ArticleID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Articlenumber__c</fullName>
        <label>Articlenumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Articletitle__c</fullName>
        <label>Articletitle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsMasterlanguage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMasterlanguage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isupdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Isupdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permalink__c</fullName>
        <label>Permalink</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Articlenumber__c</columns>
        <columns>Articletitle__c</columns>
        <columns>Language__c</columns>
        <columns>Permalink__c</columns>
        <columns>Isupdated__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>